feat: TC내용 상세 조회 기능 구현